--- a/roboflow_config.json
+++ b/roboflow_config.json
@@ -1,9 +1,9 @@
 {
   "__comment1": "Obtain these values via Roboflow",
-  "ROBOFLOW_API_KEY": "xxxxxxxxxx",
-  "ROBOFLOW_MODEL": "xx-name--#",
+  "ROBOFLOW_API_KEY": "HIXGKPVWtBYgeW40VCpW",
+  "ROBOFLOW_MODEL": "tiger-detection-mljxu",
   "ROBOFLOW_SIZE": 416,
-  "DATASET_NAME": "your-dataset",
+  "DATASET_NAME": "tiger-detection-mljxu",
   "LOCAL_SERVER": false,
   "LAPLACIAN_THRESHOLD": 300,
   "CONFIDENCE_THRESHOLD": 0.4
